Move to use JDK11 containers for running

--- a/common/scala/Dockerfile
+++ b/common/scala/Dockerfile
@@ -15,7 +15,9 @@
 # limitations under the License.
 #
 
-FROM adoptopenjdk/openjdk8:x86_64-alpine-jdk8u172-b11
+
+# FROM adoptopenjdk/openjdk11:alpine-slim
+FROM adoptopenjdk/openjdk11@sha256:3fbc3bbd88dac2a4049668951f25cdfdd7271de7fd66bbe3e78d26606ed9ed18
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
